--- a/experiment-csharp/csharp-experiment.csproj
+++ b/experiment-csharp/csharp-experiment.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>csharp_experiment.Experiment.CSharp.Lang.Statement.FizzBuzzByStatement</StartupObject>
+    <StartupObject>csharp_experiment.Experiment.CSharp.Lang.Linq.FizzBuzzByLinq</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Experiment\CSharp\Lang\Linq\FizzBuzzByLinq.cs" />
     <Compile Include="Experiment\CSharp\Lang\Statement\FizzBuzzByStatement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
