--- a/vagrant/centos-7.2/Vagrantfile
+++ b/vagrant/centos-7.2/Vagrantfile
@@ -68,4 +68,6 @@ Vagrant.configure(2) do |config|
   #   sudo apt-get update
   #   sudo apt-get install -y apache2
   # SHELL
+
+  config.ssh.private_key_path = "~/.ssh/id_rsa"
 end
