--- a/experiment-java/.project
+++ b/experiment-java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>java-experiment</name>
+	<name>experiment-java</name>
 	<comment></comment>
 	<projects>
 	</projects>
