--- a/experiment-csharp/experiment-csharp.csproj
+++ b/experiment-csharp/experiment-csharp.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>csharp_experiment.Experiment.CSharp.Lang.Linq.FizzBuzzByLinq</StartupObject>
+    <StartupObject>Experiment.CSharp.Lang.Linq.FizzBuzzByLinq</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,7 +48,6 @@
   <ItemGroup>
     <Compile Include="Experiment\CSharp\Lang\Linq\FizzBuzzByLinq.cs" />
     <Compile Include="Experiment\CSharp\Lang\Statement\FizzBuzzByStatement.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
