--- a/linebot-jaxrs/pom.xml
+++ b/linebot-jaxrs/pom.xml
@@ -42,6 +42,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+      <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+      <version>2.23.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
