H2 Databaseの依存情報を追加

--- a/tasklist-javaee/pom.xml
+++ b/tasklist-javaee/pom.xml
@@ -13,6 +13,13 @@
   </properties>
 
   <dependencies>
+    <!-- compile -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.192</version>
+    </dependency>
+
      <!-- provided -->
     <dependency>
       <groupId>javax</groupId>
