--- a/experiment-java/pom.xml
+++ b/experiment-java/pom.xml
@@ -1,20 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>experiment.java</groupId>
-  <artifactId>java-experiment</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <groupId>java.experiment</groupId>
+  <artifactId>experiment-java</artifactId>
   <packaging>jar</packaging>
-
-  <name>java-experiment</name>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>experiment-java</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
+    <!-- test -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -24,16 +25,6 @@
   </dependencies>
 
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
+    <finalName>experiment-java</finalName>
   </build>
 </project>
