--- a/linebot-jaxrs/pom.xml
+++ b/linebot-jaxrs/pom.xml
@@ -5,12 +5,13 @@
   <artifactId>linebot-jaxrs</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-
   <name>linebot-jaxrs Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -51,16 +52,5 @@
 
   <build>
     <finalName>linebot-jaxrs</finalName>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 </project>
