--- a/smp-prototype/src/main/webapp/WEB-INF/web.xml
+++ b/smp-prototype/src/main/webapp/WEB-INF/web.xml
@@ -781,6 +781,9 @@ standard deployment descriptor.
   </servlet>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>*.html</url-pattern>
   </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
 </web-app>
