--- a/attendance-report/attendance-report-web/pom.xml
+++ b/attendance-report/attendance-report-web/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>attendance.report</groupId>
-  <artifactId>attendance-report</artifactId>
+  <artifactId>attendance-report-web</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -63,7 +63,7 @@
   </dependencies>
 
   <build>
-    <finalName>attendance-report</finalName>
+    <finalName>attendance-report-web</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
