親モジュールへのパス設定を修正

--- a/attendance-report/attendance-report-web/pom.xml
+++ b/attendance-report/attendance-report-web/pom.xml
@@ -7,7 +7,7 @@
     <groupId>attendance.report</groupId>
     <artifactId>attendance-report-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../attendance-report-parent/pom.xml</relativePath>
+    <relativePath>../attendance-report-parent</relativePath>
   </parent>
 
   <properties>
